Work on caching of progress, parallel execution and run types.